# Translator

./: CMakeLists.txt  Main.qml  ReadMe.md  Translator.cpp  Translator.h  favicon.rc  main.cpp  qtquickcontrols2.conf
app/: assets.qrc  main.cpp  main.qml  qml.qrc
app/src/: Translator.cpp  Translator.h
app/uikit/: SvgImage.qml  qmldir
cmake/: AddQMLSubdirectories.cmake
